<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">mitbbs</string>
    <string name="toparticles">置顶文章</string>
    <string name="hotboards">当前热门版面</string>
    <string name="hotclubs">当前热门俱乐部</string>
    <string android:id="@+id/string1" name="refresh" android:layout_width="wrap_content" android:layout_height="wrap_content">刷新</string>
    <string android:id="@+id/string1" name="login" android:layout_width="wrap_content" android:layout_height="wrap_content">登录</string>
    <string name="title_activity_board">BoardActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_post">PostActivity</string>
    <string android:layout_width="wrap_content" android:id="@+id/string1" android:layout_height="wrap_content" name="return_board">返回版面</string>
    <string android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/string1" name="first_page">首页</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="previous_page">上页</string>
    <string android:id="@+id/string1" android:layout_height="wrap_content" android:layout_width="wrap_content" name="next_page">下页</string>
    <string android:id="@+id/string1" android:layout_width="wrap_content" android:layout_height="wrap_content" name="go">GO</string>
    <string name="last_page">尾页</string>

</resources>
